--- a/Block-Enconding/BE_general.ipynb
+++ b/Block-Enconding/BE_general.ipynb
@@ -9,11 +9,16 @@
     "\n",
     "1. How to Construct Block Encodings\n",
     "    1. The LCU Approach\n",
+    "        - Matrix needs to be Hermitian\n",
     "    2. Matrix Access Oracle Approach\n",
     "        1. Block Encoding structured matrices\n",
+    "        - No need for the Matrix to be Hermitian\n",
     "        2. Block Encoding sparse matrices\n",
+    "        - No need for the Matrix to be Hermitian \n",
     "    3. Using BlockEncode defined function Approach\n",
-    "    4. Manual Block Encoding with Qiskit Approach"
+    "        - No need for the Matrix to be Hermitian\n",
+    "    4. Manual Block Encoding with Qiskit Approach\n",
+    "        - No need for the Matrix to be Hermitian"
    ]
   },
   {
