General updates and reorganization

--- a/Block-Enconding/BE_cart-pendulum_example.ipynb
+++ b/Block-Enconding/BE_cart-pendulum_example.ipynb
@@ -15,9 +15,9 @@
     "A =\n",
     "\\begin{pmatrix} \n",
     "0 & 1 & 0  & 0 \\\\ \n",
-    "1 & -0.2 & 2 & 1 \\\\ \n",
-    "0 & 2 & 0 & -6 \\\\ \n",
-    "0 & 1 & -6  & 0 \n",
+    "0 & -0.2 & -2 & 1 \\\\ \n",
+    "0 & 0 & 0 & 1 \\\\ \n",
+    "0 & -0.1 & 6  & 0 \n",
     "\\end{pmatrix} \n",
     "$$\n",
     "\n",
@@ -40,10 +40,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "32ceba1e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\CristinaÁlvarezYuste\\AppData\\Local\\Temp\\ipykernel_14304\\1438049819.py:10: DeprecationWarning: Using Qiskit with Python 3.9 is deprecated as of the 2.1.0 release. Support for running Qiskit with Python 3.9 will be removed in the 2.3.0 release, which coincides with when Python 3.9 goes end of life.\n",
+      "  from qiskit import QuantumCircuit\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -59,10 +68,10 @@
     "from scipy.linalg import svd, sqrtm\n",
     "\n",
     "A = np.array(\n",
-    "    [[0,   1, 0,  0],\n",
-    "     [1,-0.2, 2,  1],\n",
-    "     [0,   2, 0,  6],\n",
-    "     [0,   1, 6,  0]], dtype=np.complex128)   \n",
+    "    [[0,  1, 0,  0],\n",
+    "     [0, -0.2, -2,  0],\n",
+    "     [0,  0, 0,  1],\n",
+    "     [0, -0.1,  6,  0]], dtype=np.complex128)   \n",
     "     "
    ]
   },
@@ -76,45 +85,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "09dc5b45",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Block-encoded A.1:\n",
-      " [[-0.000e+00+0.j  1.087e-01+0.j -0.000e+00+0.j ... -8.700e-03+0.j\n",
-      "  -2.920e-02+0.j -7.330e-02+0.j]\n",
-      " [ 1.087e-01+0.j -2.170e-02+0.j  2.174e-01+0.j ...  3.540e-02+0.j\n",
-      "  -2.770e-02+0.j  7.180e-02+0.j]\n",
-      " [-0.000e+00+0.j  2.174e-01+0.j  0.000e+00+0.j ... -2.770e-02+0.j\n",
-      "  -5.290e-02+0.j -8.700e-03+0.j]\n",
-      " ...\n",
-      " [-8.700e-03+0.j  3.540e-02+0.j -2.770e-02+0.j ...  5.294e-01+0.j\n",
-      "   2.820e-02+0.j  5.530e-02+0.j]\n",
-      " [-2.920e-02+0.j -2.770e-02+0.j -5.290e-02+0.j ...  2.820e-02+0.j\n",
-      "   8.882e-01+0.j  2.000e-04+0.j]\n",
-      " [-7.330e-02+0.j  7.180e-02+0.j -8.700e-03+0.j ...  5.530e-02+0.j\n",
-      "   2.000e-04+0.j  7.208e-01+0.j]]\n",
-      "\n",
-      "alpha (sum |c_i|) = 9.2\n",
-      "\n",
-      "Approx A/alpha block (real part):\n",
-      "[[-0.      +0.j  0.108696+0.j -0.      +0.j  0.      +0.j]\n",
-      " [ 0.108696+0.j -0.021739+0.j  0.217391+0.j  0.108696+0.j]\n",
-      " [-0.      +0.j  0.217391+0.j  0.      +0.j  0.652174+0.j]\n",
-      " [ 0.      +0.j  0.108696+0.j  0.652174+0.j -0.      +0.j]]\n",
-      "\n",
-      "alpha * block (should be ~ A):\n",
-      "[[-0. +0.j  1. +0.j -0. +0.j  0. +0.j]\n",
-      " [ 1. +0.j -0.2+0.j  2. +0.j  1. +0.j]\n",
-      " [-0. +0.j  2. +0.j  0. +0.j  6. +0.j]\n",
-      " [ 0. +0.j  1. +0.j  6. +0.j -0. +0.j]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if not np.allclose(A, A.conj().T):\n",
     "    U1 = None\n",
@@ -194,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "6856d08f",
    "metadata": {},
    "outputs": [
@@ -206,26 +180,26 @@
       "\n",
       "Block-encoded A.2:\n",
       " [[-0.      0.0417 -0.     ... -0.2465 -0.25   -0.25  ]\n",
-      " [ 0.0417 -0.0083  0.0833 ...  0.2499  0.2357  0.2465]\n",
-      " [-0.      0.0833  0.     ...  0.2357  0.25   -0.    ]\n",
+      " [-0.     -0.0083 -0.0833 ...  0.2499  0.2357  0.25  ]\n",
+      " [-0.     -0.     -0.     ...  0.25    0.25    0.2465]\n",
       " ...\n",
-      " [ 0.2465 -0.2499 -0.2357 ... -0.0083  0.0833 -0.0417]\n",
-      " [ 0.25   -0.2357 -0.25   ...  0.0833 -0.     -0.25  ]\n",
-      " [ 0.25   -0.2465 -0.     ... -0.0417 -0.25    0.    ]]\n",
+      " [ 0.25   -0.2499 -0.2357 ... -0.0083 -0.0833 -0.    ]\n",
+      " [ 0.25   -0.25   -0.25   ...  0.     -0.     -0.0417]\n",
+      " [ 0.25   -0.25   -0.     ...  0.0042 -0.25    0.    ]]\n",
       "\n",
       "alpha (matrix dim.) = 4\n",
       "\n",
       "Approx A/alpha block (real part):\n",
       "[[-0.        0.041667 -0.        0.      ]\n",
-      " [ 0.041667 -0.008333  0.083333  0.041667]\n",
-      " [-0.        0.083333  0.        0.25    ]\n",
-      " [-0.        0.041667  0.25      0.      ]]\n",
+      " [-0.       -0.008333 -0.083333  0.      ]\n",
+      " [-0.       -0.       -0.        0.041667]\n",
+      " [-0.       -0.004167  0.25     -0.      ]]\n",
       "\n",
       "alpha * block * scaling (should be ~ A):\n",
       "[[-0.   1.  -0.   0. ]\n",
-      " [ 1.  -0.2  2.   1. ]\n",
-      " [-0.   2.   0.   6. ]\n",
-      " [-0.   1.   6.   0. ]]\n"
+      " [-0.  -0.2 -2.   0. ]\n",
+      " [-0.  -0.  -0.   1. ]\n",
+      " [-0.  -0.1  6.  -0. ]]\n"
      ]
     }
    ],
@@ -320,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "9a717fbb",
    "metadata": {},
    "outputs": [
@@ -329,36 +303,36 @@
      "output_type": "stream",
      "text": [
       "Block-encoded A.3:\n",
-      " [[ 0.000e+00+0.j  1.930e-02+0.j  0.000e+00+0.j  0.000e+00+0.j\n",
-      "   9.998e-01+0.j  0.000e+00+0.j -4.000e-04+0.j -2.000e-04+0.j]\n",
-      " [ 1.930e-02+0.j -3.900e-03+0.j  3.860e-02+0.j  1.930e-02+0.j\n",
-      "   0.000e+00+0.j  9.989e-01+0.j -1.000e-03+0.j -2.200e-03+0.j]\n",
-      " [ 0.000e+00+0.j  3.860e-02+0.j  0.000e+00+0.j  1.158e-01+0.j\n",
-      "  -4.000e-04+0.j -1.000e-03+0.j  9.925e-01+0.j -4.000e-04+0.j]\n",
-      " [ 0.000e+00+0.j  1.930e-02+0.j  1.158e-01+0.j  0.000e+00+0.j\n",
-      "  -2.000e-04+0.j -2.200e-03+0.j -4.000e-04+0.j  9.931e-01+0.j]\n",
-      " [ 9.998e-01+0.j  0.000e+00+0.j -4.000e-04+0.j -2.000e-04+0.j\n",
-      "  -0.000e+00+0.j -1.930e-02+0.j -0.000e+00+0.j -0.000e+00+0.j]\n",
-      " [ 0.000e+00+0.j  9.989e-01+0.j -1.000e-03+0.j -2.200e-03+0.j\n",
-      "  -1.930e-02+0.j  3.900e-03+0.j -3.860e-02+0.j -1.930e-02+0.j]\n",
-      " [-4.000e-04+0.j -1.000e-03+0.j  9.925e-01+0.j -4.000e-04+0.j\n",
-      "  -0.000e+00+0.j -3.860e-02+0.j -0.000e+00+0.j -1.158e-01+0.j]\n",
-      " [-2.000e-04+0.j -2.200e-03+0.j -4.000e-04+0.j  9.931e-01+0.j\n",
-      "  -0.000e+00+0.j -1.930e-02+0.j -1.158e-01+0.j -0.000e+00+0.j]]\n",
+      " [[ 0.    +0.j  0.0208+0.j  0.    +0.j  0.    +0.j  0.9998+0.j  0.    +0.j\n",
+      "   0.    +0.j  0.    +0.j]\n",
+      " [ 0.    +0.j -0.0042+0.j -0.0416+0.j  0.    +0.j  0.    +0.j  0.9991+0.j\n",
+      "  -0.    +0.j  0.0026+0.j]\n",
+      " [ 0.    +0.j  0.    +0.j  0.    +0.j  0.0208+0.j  0.    +0.j -0.    +0.j\n",
+      "   0.9998+0.j  0.    +0.j]\n",
+      " [ 0.    +0.j -0.0021+0.j  0.1248+0.j  0.    +0.j  0.    +0.j  0.0026+0.j\n",
+      "   0.    +0.j  0.9922+0.j]\n",
+      " [ 1.    +0.j  0.    +0.j  0.    +0.j  0.    +0.j -0.    +0.j -0.    +0.j\n",
+      "  -0.    +0.j -0.    +0.j]\n",
+      " [ 0.    +0.j  0.9998+0.j  0.    +0.j  0.    +0.j -0.0208+0.j  0.0042+0.j\n",
+      "  -0.    +0.j  0.0021+0.j]\n",
+      " [ 0.    +0.j  0.    +0.j  0.9913+0.j  0.    +0.j -0.    +0.j  0.0416+0.j\n",
+      "  -0.    +0.j -0.1248+0.j]\n",
+      " [ 0.    +0.j  0.    +0.j  0.    +0.j  0.9998+0.j -0.    +0.j -0.    +0.j\n",
+      "  -0.0208+0.j -0.    +0.j]]\n",
       "\n",
-      "alpha (spect norm) = 51.8\n",
+      "alpha (spect norm) = 48.089999999999996\n",
       "\n",
       "Approx A/alpha block (real part):\n",
-      "[[ 0.      +0.j  0.019305+0.j  0.      +0.j  0.      +0.j]\n",
-      " [ 0.019305+0.j -0.003861+0.j  0.03861 +0.j  0.019305+0.j]\n",
-      " [ 0.      +0.j  0.03861 +0.j  0.      +0.j  0.11583 +0.j]\n",
-      " [ 0.      +0.j  0.019305+0.j  0.11583 +0.j  0.      +0.j]]\n",
+      "[[ 0.      +0.j  0.020794+0.j  0.      +0.j  0.      +0.j]\n",
+      " [ 0.      +0.j -0.004159+0.j -0.041589+0.j  0.      +0.j]\n",
+      " [ 0.      +0.j  0.      +0.j  0.      +0.j  0.020794+0.j]\n",
+      " [ 0.      +0.j -0.002079+0.j  0.124766+0.j  0.      +0.j]]\n",
       "\n",
       "alpha * block (should be ~ A):\n",
       "[[ 0. +0.j  1. +0.j  0. +0.j  0. +0.j]\n",
-      " [ 1. +0.j -0.2+0.j  2. +0.j  1. +0.j]\n",
-      " [ 0. +0.j  2. +0.j  0. +0.j  6. +0.j]\n",
-      " [ 0. +0.j  1. +0.j  6. +0.j  0. +0.j]]\n"
+      " [ 0. +0.j -0.2+0.j -2. +0.j  0. +0.j]\n",
+      " [ 0. +0.j  0. +0.j  0. +0.j  1. +0.j]\n",
+      " [ 0. +0.j -0.1+0.j  6. +0.j  0. +0.j]]\n"
      ]
     }
    ],
@@ -389,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "373c7fd0",
    "metadata": {},
    "outputs": [
@@ -398,36 +372,36 @@
      "output_type": "stream",
      "text": [
       "Block-encoded A.4:\n",
-      " [[ 0.    +0.j  0.1499+0.j  0.    +0.j  0.    +0.j  0.9876+0.j -0.004 +0.j\n",
-      "  -0.0407+0.j -0.0237+0.j]\n",
-      " [ 0.1499+0.j -0.03  +0.j  0.2997+0.j  0.1499+0.j -0.004 +0.j  0.8834+0.j\n",
-      "  -0.1499+0.j -0.248 +0.j]\n",
-      " [ 0.    +0.j  0.2997+0.j  0.    +0.j  0.8991+0.j -0.0407+0.j -0.1499+0.j\n",
-      "   0.2261+0.j -0.1629+0.j]\n",
-      " [ 0.    +0.j  0.1499+0.j  0.8991+0.j  0.    +0.j -0.0237+0.j -0.248 +0.j\n",
-      "  -0.1629+0.j  0.2838+0.j]\n",
-      " [ 0.9876+0.j -0.004 +0.j -0.0407+0.j -0.0237+0.j -0.    +0.j -0.1499+0.j\n",
+      " [[ 0.    +0.j  0.1581+0.j  0.    +0.j  0.    +0.j  0.9874+0.j  0.0024+0.j\n",
+      "   0.    +0.j  0.0016+0.j]\n",
+      " [ 0.    +0.j -0.0316+0.j -0.3162+0.j  0.    +0.j  0.0024+0.j  0.8996+0.j\n",
+      "   0.    +0.j  0.2997+0.j]\n",
+      " [ 0.    +0.j  0.    +0.j  0.    +0.j  0.1581+0.j  0.    +0.j  0.    +0.j\n",
+      "   0.9874+0.j  0.    +0.j]\n",
+      " [ 0.    +0.j -0.0158+0.j  0.9487+0.j  0.    +0.j  0.0016+0.j  0.2997+0.j\n",
+      "   0.    +0.j  0.0998+0.j]\n",
+      " [ 1.    +0.j  0.    +0.j  0.    +0.j  0.    +0.j -0.    +0.j -0.    +0.j\n",
       "  -0.    +0.j -0.    +0.j]\n",
-      " [-0.004 +0.j  0.8834+0.j -0.1499+0.j -0.248 +0.j -0.1499+0.j  0.03  +0.j\n",
-      "  -0.2997+0.j -0.1499+0.j]\n",
-      " [-0.0407+0.j -0.1499+0.j  0.2261+0.j -0.1629+0.j -0.    +0.j -0.2997+0.j\n",
-      "  -0.    +0.j -0.8991+0.j]\n",
-      " [-0.0237+0.j -0.248 +0.j -0.1629+0.j  0.2838+0.j -0.    +0.j -0.1499+0.j\n",
-      "  -0.8991+0.j -0.    +0.j]]\n",
+      " [ 0.    +0.j  0.9868+0.j  0.0051+0.j  0.    +0.j -0.1581+0.j  0.0316+0.j\n",
+      "  -0.    +0.j  0.0158+0.j]\n",
+      " [ 0.    +0.j  0.0051+0.j  0.    +0.j  0.    +0.j -0.    +0.j  0.3162+0.j\n",
+      "  -0.    +0.j -0.9487+0.j]\n",
+      " [ 0.    +0.j  0.    +0.j  0.    +0.j  0.9874+0.j -0.    +0.j -0.    +0.j\n",
+      "  -0.1581+0.j -0.    +0.j]]\n",
       "\n",
-      "alpha (spect norm) = 6.673254632700024\n",
+      "alpha (spect norm) = 6.324636505805105\n",
       "\n",
       "Approx A/alpha block (real part):\n",
-      "[[ 0.      +0.j  0.149852+0.j  0.      +0.j  0.      +0.j]\n",
-      " [ 0.149852+0.j -0.02997 +0.j  0.299704+0.j  0.149852+0.j]\n",
-      " [ 0.      +0.j  0.299704+0.j  0.      +0.j  0.899112+0.j]\n",
-      " [ 0.      +0.j  0.149852+0.j  0.899112+0.j  0.      +0.j]]\n",
+      "[[ 0.      +0.j  0.158112+0.j  0.      +0.j  0.      +0.j]\n",
+      " [ 0.      +0.j -0.031622+0.j -0.316224+0.j  0.      +0.j]\n",
+      " [ 0.      +0.j  0.      +0.j  0.      +0.j  0.158112+0.j]\n",
+      " [ 0.      +0.j -0.015811+0.j  0.948671+0.j  0.      +0.j]]\n",
       "\n",
       "alpha * block (should be ~ A):\n",
       "[[ 0. +0.j  1. +0.j  0. +0.j  0. +0.j]\n",
-      " [ 1. +0.j -0.2+0.j  2. +0.j  1. +0.j]\n",
-      " [ 0. +0.j  2. +0.j  0. +0.j  6. +0.j]\n",
-      " [ 0. +0.j  1. +0.j  6. +0.j  0. +0.j]]\n"
+      " [ 0. +0.j -0.2+0.j -2. +0.j  0. +0.j]\n",
+      " [ 0. +0.j  0. +0.j  0. +0.j  1. +0.j]\n",
+      " [ 0. +0.j -0.1+0.j  6. +0.j  0. +0.j]]\n"
      ]
     }
    ],
@@ -471,10 +445,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "679e643a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Correctness (A vs (alpha * U_00)   U Shape U Hermitian Unitary\n",
+      "U1                             None      None        None    None\n",
+      "U2                            False  (32, 32)       False    True\n",
+      "U3                             True    (8, 8)       False    True\n",
+      "U4                             True    (8, 8)       False    True\n"
+     ]
+    }
+   ],
    "source": [
     "# In order to work even with non-Hermitian A, we set U1, alpha1, block1 to None at the beginning if A is not Hermitian.\n",
     "def shape_or_none(U):\n",
@@ -490,13 +476,12 @@
     "    return None if (alpha is None or block is None) else np.allclose(A, alpha * block)\n",
     "\n",
     "def error_norm_or_none(A, alpha, block):\n",
-    "    return None if (alpha is None or block is None) else np.linalg.norm(A - alpha * block)\n",
-    "\n"
+    "    return None if (alpha is None or block is None) else np.linalg.norm(A - alpha * block)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "642007b7",
    "metadata": {},
    "outputs": [
@@ -504,25 +489,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "               Method  Needs Hermitian A?      Alpha  Correctness (allclose)  \\\n",
-      "U1                LCU                True   9.200000                    True   \n",
-      "U2               Demo               False   4.000000                    True   \n",
-      "U3     BlockEncode op               False  51.800000                    True   \n",
-      "U4  SVD spectral norm               False   6.673255                    True   \n",
+      "               Method  Needs Hermitian A?      Alpha Correctness (allclose)  \\\n",
+      "U1                LCU                True        NaN                   None   \n",
+      "U2               Demo               False   4.000000                   True   \n",
+      "U3     BlockEncode op               False  48.090000                   True   \n",
+      "U4  SVD spectral norm               False   6.324637                   True   \n",
       "\n",
-      "      Error norm   U shape  U Hermitian  U Unitary  \n",
-      "U1  2.332350e-15  (64, 64)         True       True  \n",
-      "U2  5.911158e-15  (32, 32)        False       True  \n",
-      "U3  1.313927e-15    (8, 8)         True       True  \n",
-      "U4  0.000000e+00    (8, 8)         True       True  \n"
+      "      Error norm   U shape U Hermitian U Unitary  \n",
+      "U1           NaN      None        None      None  \n",
+      "U2  4.104992e-15  (32, 32)       False      True  \n",
+      "U3  2.719480e-16    (8, 8)       False      True  \n",
+      "U4  2.737128e-16    (8, 8)       False      True  \n"
      ]
     }
    ],
    "source": [
-    "# CHECKS\n",
+    "# CHe\n",
     "\n",
     "data = {\n",
-    "    \"Method\": [\"LCU\", \"Demo\", \"BlockEncode op\", \"SVD spectral norm\"],\n",
+    "    \"Method\": [\"LCU (Penny)\", \"Matrix Acess Oracle (Penny)\", \"BlockEncode op (Penny)\", \"SVD spectral norm (Qiskit)\"],\n",
     "    \"Needs Hermitian A?\": [True, False, False, False],\n",
     "    \"Alpha\": [alpha1, alpha2, alpha3, alpha4],\n",
     "    \"Correctness (allclose)\": [\n",
@@ -558,14 +543,6 @@
     "df = pd.DataFrame(data, index=[\"U1\", \"U2\", \"U3\", \"U4\"])\n",
     "print(df)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bbe1238c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
