--- a/Block-Enconding/BE_general.ipynb
+++ b/Block-Enconding/BE_general.ipynb
@@ -74,7 +74,7 @@
     "- **Sec. 1.1–1.2 (Realistic operators):**  \n",
     "  Large, sparse, or structured matrices → oracle-based methods such as **LCU** and **FABLE** (PennyLane based).\n",
     "\n",
-    "- **Sec. 1.3 (Pedagogical cases):**  \n",
+    "- **Sec. 1.3- 1.4 (Pedagogical cases):**  \n",
     "  Small toy matrices → direct **block completion**, mainly for intuition.\n",
     "\n",
     "\n",
